data/test/regression/type_check/fail/issue_239c.v
genvar i;
always @(posedge clock.val) begin
  if (i) begin end
end
